--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "onfido-rn-sdk": "file:../"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
