--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,6 +49,7 @@ android {
         targetSdkVersion safeExtGet('targetSdkVersion', DEFAULT_TARGET_SDK_VERSION)
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     lintOptions {
         abortOnError false
@@ -78,7 +79,8 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
-    implementation 'com.onfido.sdk.capture:onfido-capture-sdk:5.5.0'
+    implementation 'com.onfido.sdk.capture:onfido-capture-sdk:6.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 def configureReactNativePom(def pom) {
