--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -128,11 +128,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.OnfidoRnSdkExample"
+        applicationId "com.onfidornsdkexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -189,8 +190,6 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-
-    compile project(':onfidornsdk')
 }
 
 // Run this once to be able to run the application with BUCK
